Bug 889610 - Aero glass fog cut off in customization mode on Windows 7, r=jaws
UltraBlame original commit: 884a90d5104273f28a64539aaa850952e4edb3f6

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -245,7 +245,7 @@
   }
 
   
-  #navigator-toolbox:not(:-moz-lwtheme) {
+  #main-window:not([customizing]):not([customize-exiting]) #navigator-toolbox:not(:-moz-lwtheme) {
     overflow-y: hidden;
   }
 
